# GreaterPrompt

./: .gitignore  LICENSE  README.md  example.py  optimizer.py  project.toml  pyproject.toml  setup.py
Web/: Overview.py
Web/pages/: 1_1️⃣GReaTer Optimizer.py  2_2️⃣APE Optimizer.py  3_3️⃣APO optimizer.py  4_4️⃣PE2 Optimizer.py  5_5️⃣TextGrad Optimizer.py
core/: optimizer.py
data/: boolean_expressions.jsonl  refactor.py
data/BBH/: boolean_expressions_refactored.jsonl
models/: __init__.py  base_model.py  gemma2.py  llama3.py  llama31.py  llama32.py  utils.py
parser/: base_parser.py
prompts/: __init__.py  prompts.py
src/GReaTer_Wenliang04/: optimizer.py
src/GReaTer_Wenliang04/models/: __init__.py  gemma2.py  llama3.py
src/greaterprompt/: __init__.py  cli.py  optimizer.py
src/greaterprompt/core/PE2/: cli.py  run.py  utils.py
src/greaterprompt/core/PE2/data/bbh/boolean_expressions/: test.csv
src/greaterprompt/core/PE2/data/bbh/boolean_expressions_raw/: train.csv
src/greaterprompt/core/PE2/example_scripts/: bbh_boolean_expressions.sh
src/greaterprompt/core/PE2/task/: zeroshotcot.py
src/greaterprompt/core/PO-Baseline/textgrad_ollm/examples/notebooks/: LocalModel.py
src/greaterprompt/core/PO-Baseline/textgrad_ollm/textgrad/: variable.py
src/greaterprompt/core/PO-Baseline/textgrad_ollm/textgrad/autograd/: functional.py  llm_ops.py  (+2 more)
src/greaterprompt/core/TextGrad/textgrad_ollm/textgrad/: loss.py  model.py  variable.py
src/greaterprompt/models/: gemma2.py  llama3.py
src/greaterprompt/utils/: __init__.py  utils.py
utils/: dataloader.py
(+19 files in other folders)
