[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greaterprompt"
version = "0.2.0"
dependencies = [
    "accelerate", "torch==2.3.1", "transformers==4.48.3", 
    "guidance==0.0.64", "openai==0.27.8", "vllm==0.5.3.post1", "retrying",
    "tqdm", "streamlit", 
]

authors = [
  {name = "Wenliang Zheng", email = "wenliangz2004@gmail.com"},
  {name = "Sarkar Snigdha Sarathi Das", email = "sfd5525@psu.edu"},
  {name = "Rui Zhang", email = "rmz5227@psu.edu"}
]
maintainers = [
  {name = "Wenliang Zheng", email = "wenliangz2004@gmail.com"}
]

description = "A Gradient-based Prompt Optimizer for Text Generation"
readme = "README_pypi.md"
license = "MIT"

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",

  "Topic :: Scientific/Engineering :: Artificial Intelligence",

  "Programming Language :: Python :: 3"
]

[project.urls]
Homepage = "https://github.com/WenliangZhoushan/GreaterPrompt"
